tests/NormalTests/paczka1/fuzzy1/29370623.err
Error in line 1: A651 A342 79,3
Error in line 2: A651 A240 76,4
Error in line 3: A651 A651 63,5
Error in line 7: 0H9rO A651 56,8
Error in line 9: A651 A651 12,4
Error in line 25: 1vi5 A342 70,2
Error in line 23: u9f A342 63,8
